# msm-gpu-zprize-2022

./: README.md
ark_msm/: Cargo.toml
ark_msm/src/: main.rs  pippenger.rs
flame_demo/: Cargo.toml
flame_demo/src/: main.rs
yrrid-2022/: Cargo.toml
yrrid-2022/benches/: msm.rs
