[package]
name = "ark_msm"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4"
ark-std = { version = "0.4", features = ["parallel"] }
ark-ec = { version = "0.4", features = ["parallel"] }
ark-ff = { version = "0.4", features = ["parallel"] }
salt-committer = { path = "/Users/flyq/workspace/github/megaeth/rust-salt/salt-committer" }
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
inferno = "0.11.21"
tempfile = "3.12.0"
